# fferyman

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
config/: watch.example.yaml
docs/: policy.md  writing-an-algorithm.md
examples/: flatten_with_duplicate.py  mirror_matching_dirs.py  sendout_flatten.py
src/fferyman/: __init__.py  __main__.py  cli.py  config.py
src/fferyman/core/: db.py  engine.py  fsops.py  hashing.py  mapper.py  policy.py  registry.py
systemd/: fferyman.service
tests/: conftest.py  test_db.py  test_flatten_example.py  test_fsops.py  test_hashing.py  test_metadata_fast_path.py  test_policies.py  test_progress.py  test_regex_mode.py  test_regressions.py
